--- a/.github/workflows/make-post.yml
+++ b/.github/workflows/make-post.yml
@@ -6,8 +6,7 @@ on:
   pull_request:
     branches: [ main ]
   schedule:
-    # * is a special character in YAML so you have to quote this string
-    - cron:  '0 15 * * *'
+    - cron:  '0 15 * * 1'
 
 jobs:
   build:
@@ -21,7 +20,7 @@ jobs:
     - name: init python env
       run: |
         pip install BeautifulSoup4       
-         
+
     - name: update list
       run: |
         python3 .script/run.py
